fix: blurry text in chromium

--- a/packages/styles.css
+++ b/packages/styles.css
@@ -164,6 +164,7 @@ html[dir='rtl'],
   display: flex;
   flex-direction: column;
   gap: 2px;
+  transform: translateZ(0);
 }
 
 [data-sonner-toast] [data-button] {
